--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-pytest
-bandit
-flake8
+annotated-types==0.7.0
+APIFlask==3.0.2
+apispec==6.8.4
+blinker==1.9.0
+click==8.3.1
+colorama==0.4.6
+dnspython==2.8.0
+email-validator==2.3.0
+Flask==3.1.2
+Flask-HTTPAuth==4.8.0
+flask-marshmallow==1.3.0
+idna==3.11
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+marshmallow==4.1.0
+packaging==25.0
+pluggy==1.6.0
+psycopg2==2.9.11
+pydantic==2.12.4
+pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==9.0.1
+python-dotenv==1.2.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+webargs==8.7.1
+Werkzeug==3.1.3
