--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ MarkupSafe==3.0.3
 marshmallow==4.1.0
 packaging==25.0
 pluggy==1.6.0
+psycopg==3.2.13
+psycopg-binary==3.2.13
 psycopg2==2.9.11
 pydantic==2.12.4
 pydantic_core==2.41.5
@@ -25,6 +27,7 @@ pytest==9.0.1
 python-dotenv==1.2.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 webargs==8.7.1
 Werkzeug==3.1.3
 flake8
