--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
 pytest
 bandit
 flake8
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.61.0
+kiwisolver==1.4.9
+packaging==25.0
+pillow==12.0.0
+psycopg==3.3.1
+psycopg-binary==3.3.1
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+six==1.17.0
+typing_extensions==4.15.0
+tzdata==2025.2
+Flask==2.3.2
